		+----------------+
		| Rhum 'n' Money |
		|    ChangeLog   |
		+----------------+


> 23/06/14
----------
 - Démarrage du projet
 - Ébauche de scénario/gameplay
 - Mise au point d'un menu rudimentaire